--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: https://raw.githubusercontent.com/kikt-blog/blog-2/pay/pay.jpg
+custom: https://cdn.jsdelivr.net/gh/kikt-blog/blog-2@pay/pay.jpg
