--- a/.github/ISSUE_TEMPLATE/other_type.yml
+++ b/.github/ISSUE_TEMPLATE/other_type.yml
@@ -22,8 +22,8 @@ body:
         "The logs, please wrapper of 
         
         <details> 
-        
-        <logs>
+       
+        Your logs...
         
         </details>
       ```
