--- a/.github/ISSUE_TEMPLATE/other_type.yml
+++ b/.github/ISSUE_TEMPLATE/other_type.yml
@@ -19,7 +19,9 @@ body:
       label: Description of your problem
       description: Please description
       placeholder: Type your info
-    render: markdown
+      render: markdown
+    validations:
+      required: true
   - type: textarea
     id: log
     attributes:
