--- a/.github/ISSUE_TEMPLATE/other_type.yml
+++ b/.github/ISSUE_TEMPLATE/other_type.yml
@@ -17,7 +17,7 @@ body:
     id: desc
     attributes:
       label: Description of your problem
-      description: Please description
+      description: Type some info
       placeholder: Type your info
       render: markdown
     validations:
